deploy: fa34f53eebc0118a6b93a54d95cb43d5cfa09a8f

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
-<link rel="stylesheet" href="css/site.css?v=beda6461a336da3dd2bd8a621e82dc589d66eb19f752e9bb0414e4c9afc3e169" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=5285e75579fc370940d3356fc5e745962bd6082f68359f220b00f0df196c32a7" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-org4c53ebf" class="outline-2 latest-section">
-<h2 id="org4c53ebf"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-org4c53ebf">
+<section id="outline-container-orgf428958" class="outline-2 latest-section">
+<h2 id="orgf428958"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-orgf428958">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">02 Dec 2024</span></span>  <a href="posts/physics/hopf_fiberation/index.html">Hopf Fibrations</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">12 Jun 2024</span></span>  <a href="posts/philosophy/consious_realism/index.html">Modern Idealists</a><br></li>
