--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgebe9438">Introduction</a></li>
-<li><a href="#orgefd8f18">Understanding Stable Diffusion</a></li>
-<li><a href="#org5599214">How Stable Diffusion Works</a></li>
-<li><a href="#orgbfb3405">Applications of Stable Diffusion</a></li>
-<li><a href="#org8029a94">Conclusion</a></li>
-<li><a href="#org9cd12a5">Code</a></li>
+<li><a href="#org6568869">Introduction</a></li>
+<li><a href="#org1d5bad9">Understanding Stable Diffusion</a></li>
+<li><a href="#org596b421">How Stable Diffusion Works</a></li>
+<li><a href="#orgb13a961">Applications of Stable Diffusion</a></li>
+<li><a href="#org967a528">Conclusion</a></li>
+<li><a href="#org28c3dc1">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-orgebe9438" class="outline-2">
-<h2 id="orgebe9438">Introduction</h2>
-<div class="outline-text-2" id="text-orgebe9438">
+<section id="outline-container-org6568869" class="outline-2">
+<h2 id="org6568869">Introduction</h2>
+<div class="outline-text-2" id="text-org6568869">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgefd8f18" class="outline-2">
-<h2 id="orgefd8f18">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgefd8f18">
+<section id="outline-container-org1d5bad9" class="outline-2">
+<h2 id="org1d5bad9">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org1d5bad9">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org5599214" class="outline-2">
-<h2 id="org5599214">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org5599214">
+<section id="outline-container-org596b421" class="outline-2">
+<h2 id="org596b421">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org596b421">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orgbfb3405" class="outline-2">
-<h2 id="orgbfb3405">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgbfb3405">
+<section id="outline-container-orgb13a961" class="outline-2">
+<h2 id="orgb13a961">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgb13a961">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org8029a94" class="outline-2">
-<h2 id="org8029a94">Conclusion</h2>
-<div class="outline-text-2" id="text-org8029a94">
+<section id="outline-container-org967a528" class="outline-2">
+<h2 id="org967a528">Conclusion</h2>
+<div class="outline-text-2" id="text-org967a528">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org9cd12a5" class="outline-2">
-<h2 id="org9cd12a5">Code</h2>
-<div class="outline-text-2" id="text-org9cd12a5">
+<section id="outline-container-org28c3dc1" class="outline-2">
+<h2 id="org28c3dc1">Code</h2>
+<div class="outline-text-2" id="text-org28c3dc1">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
