--- a/README.html
+++ b/README.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
-<link rel="stylesheet" href="css/site.css?v=beda6461a336da3dd2bd8a621e82dc589d66eb19f752e9bb0414e4c9afc3e169" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=5285e75579fc370940d3356fc5e745962bd6082f68359f220b00f0df196c32a7" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -82,9 +82,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org5d13a46" class="outline-2">
-<h2 id="org5d13a46">Introduction</h2>
-<div class="outline-text-2" id="text-org5d13a46">
+<section id="outline-container-org14cebb5" class="outline-2">
+<h2 id="org14cebb5">Introduction</h2>
+<div class="outline-text-2" id="text-org14cebb5">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
