--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org6568869">Introduction</a></li>
-<li><a href="#org1d5bad9">Understanding Stable Diffusion</a></li>
-<li><a href="#org596b421">How Stable Diffusion Works</a></li>
-<li><a href="#orgb13a961">Applications of Stable Diffusion</a></li>
-<li><a href="#org967a528">Conclusion</a></li>
-<li><a href="#org28c3dc1">Code</a></li>
+<li><a href="#org19cdfdc">Introduction</a></li>
+<li><a href="#org44e081f">Understanding Stable Diffusion</a></li>
+<li><a href="#org3e0f315">How Stable Diffusion Works</a></li>
+<li><a href="#orga8feb67">Applications of Stable Diffusion</a></li>
+<li><a href="#org1696cc8">Conclusion</a></li>
+<li><a href="#org893b1db">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org6568869" class="outline-2">
-<h2 id="org6568869">Introduction</h2>
-<div class="outline-text-2" id="text-org6568869">
+<section id="outline-container-org19cdfdc" class="outline-2">
+<h2 id="org19cdfdc">Introduction</h2>
+<div class="outline-text-2" id="text-org19cdfdc">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org1d5bad9" class="outline-2">
-<h2 id="org1d5bad9">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org1d5bad9">
+<section id="outline-container-org44e081f" class="outline-2">
+<h2 id="org44e081f">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org44e081f">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org596b421" class="outline-2">
-<h2 id="org596b421">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org596b421">
+<section id="outline-container-org3e0f315" class="outline-2">
+<h2 id="org3e0f315">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org3e0f315">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orgb13a961" class="outline-2">
-<h2 id="orgb13a961">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgb13a961">
+<section id="outline-container-orga8feb67" class="outline-2">
+<h2 id="orga8feb67">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orga8feb67">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org967a528" class="outline-2">
-<h2 id="org967a528">Conclusion</h2>
-<div class="outline-text-2" id="text-org967a528">
+<section id="outline-container-org1696cc8" class="outline-2">
+<h2 id="org1696cc8">Conclusion</h2>
+<div class="outline-text-2" id="text-org1696cc8">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org28c3dc1" class="outline-2">
-<h2 id="org28c3dc1">Code</h2>
-<div class="outline-text-2" id="text-org28c3dc1">
+<section id="outline-container-org893b1db" class="outline-2">
+<h2 id="org893b1db">Code</h2>
+<div class="outline-text-2" id="text-org893b1db">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
