--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-orgf428958" class="outline-2 latest-section">
-<h2 id="orgf428958"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-orgf428958">
+<section id="outline-container-orgb720f56" class="outline-2 latest-section">
+<h2 id="orgb720f56"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-orgb720f56">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">02 Dec 2024</span></span>  <a href="posts/physics/hopf_fiberation/index.html">Hopf Fibrations</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">12 Jun 2024</span></span>  <a href="posts/philosophy/consious_realism/index.html">Modern Idealists</a><br></li>
