--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -46,7 +46,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org09867de">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org4681aae">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -67,9 +67,9 @@
 </script>
 
 
-<section id="outline-container-org09867de" class="outline-2">
-<h2 id="org09867de">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-org09867de">
+<section id="outline-container-org4681aae" class="outline-2">
+<h2 id="org4681aae">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org4681aae">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
