--- a/README.html
+++ b/README.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
-<link rel="stylesheet" href="css/site.css?v=5285e75579fc370940d3356fc5e745962bd6082f68359f220b00f0df196c32a7" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=6fc52a04c7d3a52fe61574e9df2f63ab21b188c8941c915f29ffa2a295028408" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -82,9 +82,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org3c92671" class="outline-2">
-<h2 id="org3c92671">Introduction</h2>
-<div class="outline-text-2" id="text-org3c92671">
+<section id="outline-container-org09fd320" class="outline-2">
+<h2 id="org09fd320">Introduction</h2>
+<div class="outline-text-2" id="text-org09fd320">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
