--- a/tutorials/BareBonesML/index.html
+++ b/tutorials/BareBonesML/index.html
@@ -68,43 +68,43 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org9429b0d">Supervised Algorithms</a>
+<li><a href="#orga1d8941">Supervised Algorithms</a>
 <ul>
-<li><a href="#org200cfd5">Support Vector Machine (SVM)</a>
+<li><a href="#org1b03aca">Support Vector Machine (SVM)</a>
 <ul>
-<li><a href="#orgf4f6baa">Dealing with outliers: The Slack term</a></li>
-<li><a href="#org9f573ea">Dealing with non-linear speration boundires: Kernel Trick</a></li>
+<li><a href="#orge39cd4a">Dealing with outliers: The Slack term</a></li>
+<li><a href="#orge353839">Dealing with non-linear speration boundires: Kernel Trick</a></li>
 </ul>
 </li>
-<li><a href="#org2759290">Naive Bayes</a>
+<li><a href="#org056c19d">Naive Bayes</a>
 <ul>
-<li><a href="#org73885fc">Limitations</a></li>
+<li><a href="#orgbba5d6b">Limitations</a></li>
 </ul>
 </li>
-<li><a href="#org7951f25">Ensemble Learning</a>
+<li><a href="#org2e70385">Ensemble Learning</a>
 <ul>
-<li><a href="#org7d37ad8">Random Forest (Bagging)</a></li>
-<li><a href="#orgda0f805">Gradient Boosting Machine</a></li>
+<li><a href="#org10218f1">Random Forest (Bagging)</a></li>
+<li><a href="#orga4bdc0f">Gradient Boosting Machine</a></li>
 </ul>
 </li>
-<li><a href="#org71379f3">Gaussian Discriminant Analysis</a></li>
-<li><a href="#orgc3f4ace">K-Nearest Neighbours</a></li>
+<li><a href="#org9a68a90">Gaussian Discriminant Analysis</a></li>
+<li><a href="#orgfe131fa">K-Nearest Neighbours</a></li>
 </ul>
 </li>
-<li><a href="#orgf63f3cb">Unsupervised Algorithms</a>
+<li><a href="#org14a90d3">Unsupervised Algorithms</a>
 <ul>
-<li><a href="#org846319d">K-Means Clustering</a></li>
-<li><a href="#org7709654">PCA</a></li>
+<li><a href="#org516a3a1">K-Means Clustering</a></li>
+<li><a href="#orgfdb40f5">PCA</a></li>
 </ul>
 </li>
-<li><a href="#org13a007b">Sequential Data</a>
+<li><a href="#org1c49ba8">Sequential Data</a>
 <ul>
-<li><a href="#org5b98dbf">Hidden Markov Model</a></li>
+<li><a href="#org919ef54">Hidden Markov Model</a></li>
 </ul>
 </li>
-<li><a href="#orgf95a122">Optimization techniques</a>
+<li><a href="#org4f3a69c">Optimization techniques</a>
 <ul>
-<li><a href="#org89bc1b4">Simulated annealing</a></li>
+<li><a href="#org6ade5ff">Simulated annealing</a></li>
 </ul>
 </li>
 </ul>
@@ -135,13 +135,13 @@ not intended to replace standard machine learning libraries for use in<br>
 production.<br>
 </p>
 
-<section id="outline-container-org9429b0d" class="outline-2">
-<h2 id="org9429b0d">Supervised Algorithms</h2>
-<div class="outline-text-2" id="text-org9429b0d">
+<section id="outline-container-orga1d8941" class="outline-2">
+<h2 id="orga1d8941">Supervised Algorithms</h2>
+<div class="outline-text-2" id="text-orga1d8941">
 </div>
-<div id="outline-container-org200cfd5" class="outline-3">
-<h3 id="org200cfd5">Support Vector Machine (SVM)</h3>
-<div class="outline-text-3" id="text-org200cfd5">
+<div id="outline-container-org1b03aca" class="outline-3">
+<h3 id="org1b03aca">Support Vector Machine (SVM)</h3>
+<div class="outline-text-3" id="text-org1b03aca">
 <p>
 Central to the SVM is the concept of maximizing the margin between classes,<br>
 achieved by finding the hyperplane that separates the data points of different<br>
@@ -205,9 +205,9 @@ as follows:<br>
 </p>
 </div>
 
-<div id="outline-container-orgf4f6baa" class="outline-4">
-<h4 id="orgf4f6baa">Dealing with outliers: The Slack term</h4>
-<div class="outline-text-4" id="text-orgf4f6baa">
+<div id="outline-container-orge39cd4a" class="outline-4">
+<h4 id="orge39cd4a">Dealing with outliers: The Slack term</h4>
+<div class="outline-text-4" id="text-orge39cd4a">
 <p>
 Slack refers to the allowance of misclassification or errors in the SVM<br>
 optimization process. Introducing slack enables SVM to handle linearly/non-linearly<br>
@@ -218,9 +218,9 @@ better to complex datasets, although too much slack can lead to overfitting.<br>
 </div>
 </div>
 
-<div id="outline-container-org9f573ea" class="outline-4">
-<h4 id="org9f573ea">Dealing with non-linear speration boundires: Kernel Trick</h4>
-<div class="outline-text-4" id="text-org9f573ea">
+<div id="outline-container-orge353839" class="outline-4">
+<h4 id="orge353839">Dealing with non-linear speration boundires: Kernel Trick</h4>
+<div class="outline-text-4" id="text-orge353839">
 <p>
 Thee kernel trick is a method used to extend SVMs for non-linear decision<br>
 boundaries without explicitly mapping the input data into a higher-dimensional<br>
@@ -240,9 +240,9 @@ applications.<br>
 </div>
 </div>
 
-<div id="outline-container-org2759290" class="outline-3">
-<h3 id="org2759290">Naive Bayes</h3>
-<div class="outline-text-3" id="text-org2759290">
+<div id="outline-container-org056c19d" class="outline-3">
+<h3 id="org056c19d">Naive Bayes</h3>
+<div class="outline-text-3" id="text-org056c19d">
 <p>
 Naive Bayes is a probabilistic algorithm commonly used for classification<br>
 tasks. Its simplicity, speed, and effectiveness make it a popular choice for<br>
@@ -308,9 +308,9 @@ Output: Predicted class labels for the test set.
 </pre>
 </div>
 
-<div id="outline-container-org73885fc" class="outline-4">
-<h4 id="org73885fc">Limitations</h4>
-<div class="outline-text-4" id="text-org73885fc">
+<div id="outline-container-orgbba5d6b" class="outline-4">
+<h4 id="orgbba5d6b">Limitations</h4>
+<div class="outline-text-4" id="text-orgbba5d6b">
 <ul class="org-ul">
 <li><b>Assumption of Feature Independence</b><br></li>
 <li><b>Handling of Continuous Features</b><br>
@@ -334,9 +334,9 @@ sparse feature spaces.<br>
 </div>
 </div>
 
-<div id="outline-container-org7951f25" class="outline-3">
-<h3 id="org7951f25">Ensemble Learning</h3>
-<div class="outline-text-3" id="text-org7951f25">
+<div id="outline-container-org2e70385" class="outline-3">
+<h3 id="org2e70385">Ensemble Learning</h3>
+<div class="outline-text-3" id="text-org2e70385">
 <p>
 Ensemble learning is a ML technique that combines the predictions of multiple<br>
 individual models to produce a stronger overall prediction. The idea behind<br>
@@ -374,9 +374,9 @@ error in the previous step.<br></li>
 </div>
 
 
-<div id="outline-container-org7d37ad8" class="outline-4">
-<h4 id="org7d37ad8">Random Forest (Bagging)</h4>
-<div class="outline-text-4" id="text-org7d37ad8">
+<div id="outline-container-org10218f1" class="outline-4">
+<h4 id="org10218f1">Random Forest (Bagging)</h4>
+<div class="outline-text-4" id="text-org10218f1">
 <p>
 Random Forest is popular ensemble learning algorithm based on <b><i>Bagging</i></b>.<br>
 During the training phase, multiple decision trees are trained.  Each decision<br>
@@ -447,9 +447,9 @@ predict(forest, X_test):
 </div>
 
 
-<div id="outline-container-orgda0f805" class="outline-4">
-<h4 id="orgda0f805">Gradient Boosting Machine</h4>
-<div class="outline-text-4" id="text-orgda0f805">
+<div id="outline-container-orga4bdc0f" class="outline-4">
+<h4 id="orga4bdc0f">Gradient Boosting Machine</h4>
+<div class="outline-text-4" id="text-orga4bdc0f">
 <p>
 It works by combining multiple weak learners, typically decision trees, to<br>
 create a strong learner that can make accurate predictions. Unlike traditional<br>
@@ -470,9 +470,9 @@ LightGBM have made it a cornerstone of modern machine learning workflows.<br>
 </div>
 </div>
 
-<div id="outline-container-org71379f3" class="outline-3">
-<h3 id="org71379f3">Gaussian Discriminant Analysis</h3>
-<div class="outline-text-3" id="text-org71379f3">
+<div id="outline-container-org9a68a90" class="outline-3">
+<h3 id="org9a68a90">Gaussian Discriminant Analysis</h3>
+<div class="outline-text-3" id="text-org9a68a90">
 <p>
 Gaussian Discriminant Analysis (GDA) is a probabilistic generative model used<br>
 for classification tasks. In GDA, it is assumed that the features of each class<br>
@@ -495,9 +495,9 @@ spaces or with highly skewed or multimodal data.<br>
 </div>
 </div>
 
-<div id="outline-container-orgc3f4ace" class="outline-3">
-<h3 id="orgc3f4ace">K-Nearest Neighbours</h3>
-<div class="outline-text-3" id="text-orgc3f4ace">
+<div id="outline-container-orgfe131fa" class="outline-3">
+<h3 id="orgfe131fa">K-Nearest Neighbours</h3>
+<div class="outline-text-3" id="text-orgfe131fa">
 <p>
 K-Nearest Neighbors (KNN) is a simple yet powerful supervised machine learning<br>
 algorithm used for both classification and regression tasks. In KNN, the<br>
@@ -522,13 +522,13 @@ between bias and variance.<br>
 </section>
 
 
-<section id="outline-container-orgf63f3cb" class="outline-2">
-<h2 id="orgf63f3cb">Unsupervised Algorithms</h2>
-<div class="outline-text-2" id="text-orgf63f3cb">
+<section id="outline-container-org14a90d3" class="outline-2">
+<h2 id="org14a90d3">Unsupervised Algorithms</h2>
+<div class="outline-text-2" id="text-org14a90d3">
 </div>
-<div id="outline-container-org846319d" class="outline-3">
-<h3 id="org846319d">K-Means Clustering</h3>
-<div class="outline-text-3" id="text-org846319d">
+<div id="outline-container-org516a3a1" class="outline-3">
+<h3 id="org516a3a1">K-Means Clustering</h3>
+<div class="outline-text-3" id="text-org516a3a1">
 <p>
 K-Means is an algorithm used for partitioning a dataset into K distinct,<br>
 non-overlapping clusters. The algorithm works by iteratively assigning data<br>
@@ -561,9 +561,9 @@ Here is the logic:<br>
 </div>
 </div>
 
-<div id="outline-container-org7709654" class="outline-3">
-<h3 id="org7709654">PCA</h3>
-<div class="outline-text-3" id="text-org7709654">
+<div id="outline-container-orgfdb40f5" class="outline-3">
+<h3 id="orgfdb40f5">PCA</h3>
+<div class="outline-text-3" id="text-orgfdb40f5">
 <p>
 Principal Component Analysis (PCA) is a dimensionality reduction technique<br>
 commonly used in data analysis and machine learning. Its primary goal is to<br>
@@ -608,13 +608,13 @@ the transformed data.<br></li>
 </section>
 
 
-<section id="outline-container-org13a007b" class="outline-2">
-<h2 id="org13a007b">Sequential Data</h2>
-<div class="outline-text-2" id="text-org13a007b">
+<section id="outline-container-org1c49ba8" class="outline-2">
+<h2 id="org1c49ba8">Sequential Data</h2>
+<div class="outline-text-2" id="text-org1c49ba8">
 </div>
-<div id="outline-container-org5b98dbf" class="outline-3">
-<h3 id="org5b98dbf">Hidden Markov Model</h3>
-<div class="outline-text-3" id="text-org5b98dbf">
+<div id="outline-container-org919ef54" class="outline-3">
+<h3 id="org919ef54">Hidden Markov Model</h3>
+<div class="outline-text-3" id="text-org919ef54">
 <p>
 Hidden Markov Models (HMMs) have been succfully used in various fields from<br>
 speech recognition to bioinformatics, for modeling sequential data. At its core,<br>
@@ -680,13 +680,13 @@ decision-making.<br>
 
 
 
-<section id="outline-container-orgf95a122" class="outline-2">
-<h2 id="orgf95a122">Optimization techniques</h2>
-<div class="outline-text-2" id="text-orgf95a122">
+<section id="outline-container-org4f3a69c" class="outline-2">
+<h2 id="org4f3a69c">Optimization techniques</h2>
+<div class="outline-text-2" id="text-org4f3a69c">
 </div>
-<div id="outline-container-org89bc1b4" class="outline-3">
-<h3 id="org89bc1b4">Simulated annealing</h3>
-<div class="outline-text-3" id="text-org89bc1b4">
+<div id="outline-container-org6ade5ff" class="outline-3">
+<h3 id="org6ade5ff">Simulated annealing</h3>
+<div class="outline-text-3" id="text-org6ade5ff">
 <p>
 <b>A technique to find approximate global optimum in hightly rugged energy<br>
 landscapes</b><br>
