--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org19cdfdc">Introduction</a></li>
-<li><a href="#org44e081f">Understanding Stable Diffusion</a></li>
-<li><a href="#org3e0f315">How Stable Diffusion Works</a></li>
-<li><a href="#orga8feb67">Applications of Stable Diffusion</a></li>
-<li><a href="#org1696cc8">Conclusion</a></li>
-<li><a href="#org893b1db">Code</a></li>
+<li><a href="#orgfa6218d">Introduction</a></li>
+<li><a href="#orgdd41cce">Understanding Stable Diffusion</a></li>
+<li><a href="#orgdb956ab">How Stable Diffusion Works</a></li>
+<li><a href="#orgb6d324b">Applications of Stable Diffusion</a></li>
+<li><a href="#org039d0a8">Conclusion</a></li>
+<li><a href="#org230d3de">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org19cdfdc" class="outline-2">
-<h2 id="org19cdfdc">Introduction</h2>
-<div class="outline-text-2" id="text-org19cdfdc">
+<section id="outline-container-orgfa6218d" class="outline-2">
+<h2 id="orgfa6218d">Introduction</h2>
+<div class="outline-text-2" id="text-orgfa6218d">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org44e081f" class="outline-2">
-<h2 id="org44e081f">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org44e081f">
+<section id="outline-container-orgdd41cce" class="outline-2">
+<h2 id="orgdd41cce">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgdd41cce">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org3e0f315" class="outline-2">
-<h2 id="org3e0f315">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org3e0f315">
+<section id="outline-container-orgdb956ab" class="outline-2">
+<h2 id="orgdb956ab">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgdb956ab">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orga8feb67" class="outline-2">
-<h2 id="orga8feb67">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orga8feb67">
+<section id="outline-container-orgb6d324b" class="outline-2">
+<h2 id="orgb6d324b">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgb6d324b">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org1696cc8" class="outline-2">
-<h2 id="org1696cc8">Conclusion</h2>
-<div class="outline-text-2" id="text-org1696cc8">
+<section id="outline-container-org039d0a8" class="outline-2">
+<h2 id="org039d0a8">Conclusion</h2>
+<div class="outline-text-2" id="text-org039d0a8">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org893b1db" class="outline-2">
-<h2 id="org893b1db">Code</h2>
-<div class="outline-text-2" id="text-org893b1db">
+<section id="outline-container-org230d3de" class="outline-2">
+<h2 id="org230d3de">Code</h2>
+<div class="outline-text-2" id="text-org230d3de">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
